--- a/app/views/template/add.jade
+++ b/app/views/template/add.jade
@@ -2,6 +2,7 @@ extends ../layouts/backend
 
 block head
     link(rel="stylesheet", href="/vendor/fileupload/css/jquery.fileupload-ui.css")
+    link(rel="stylesheet", href="/vendor/inlineEditor/css/inlineEditor.min.css")
     link(rel="stylesheet", href="/vendor/bootstrap-colorpicker/css/bootstrap-colorpicker.css")
 
 block content
@@ -136,26 +137,30 @@ block content
                 table.table.hide
                     thead
                         tr
-                            th File name (Size)
-                            th(style="width: 30%") Description
-                            th(style="width: 30%") Progress
+                            th File name / Size
+                            th(style="width: 35%") Description
+                            th(style="width: 25%") Progress
                             th Actions
                     tbody#uploadedFiles
                         tr#fileRowTemplate.hide
                             td
                             td
-                                input.form-control.descriptionText(type="text", disabled)
+                                span.editableDesc Click to edit
                             td
                                 div.progress.progress-striped.active
                                     div.progress-bar.progress-bar-success(style="width: 0%;")
                             td
-                                button.btn.btn-danger.removeButton Remove
+                                div.btn-group
+                                    button.btn.btn-danger.removeButton(type="button", title="Remove")
+                                        i.fa.fa-times
+                                    button.btn.btn-default.changeButton(type="button", title="Upload")
+                                        i.fa.fa-upload
 
                 div.text-center
                     p You can choose many files at the same time
                     div.btn.btn-default.fileinput-button
                         span Upload files
-                        input#uploader(type="file", name="files[]", data-url="/admin/upload", multiple)
+                        input#uploader(type="file", name="files[]", data-url="/admin/file/upload", multiple)
 
             div#memberships.tab-pane
                 p Indicate the accounts who can download the files
@@ -208,6 +213,7 @@ block footerScript
     script(type="text/javascript", src="/vendor/filesize/filesize.min.js")
     script(type="text/javascript", src="/vendor/bootstrapvalidator/js/bootstrapValidator.min.js")
     script(type="text/javascript", src="/vendor/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js")
+    script(type="text/javascript", src="/vendor/inlineEditor/js/inlineEditor.min.js")
     script(type="text/javascript").
         $(document).ready(function() {
             // Form validator
@@ -284,15 +290,22 @@ block footerScript
             $('#uploader').fileupload({
                 dataType: 'json',
                 autoUpload: true,
+                formData: {},
                 url: '/admin/file/upload',
                 start: function(e, data) {
+                    $('.changeButton').attr('disabled', 'disabled');
                     $('#saveButton').attr('disabled', 'disabled');
                 },
                 done: function(e, data) {
+                    var editingRow = $('#uploader').data('editingRow');
                     $.each(data.result.files, function(index, file) {
-                        var $tr = $('#uploadedFiles').find('tr[data-file-name="' + file.name + '"]');
+                        var $tr        = $('#uploadedFiles').find('tr[data-file-name="' + file.name + '"]'),
+                            editingRow = $('#uploader').data('editingRow');;
                         if ($tr) {
-                            $tr.data('file', file).find('input.descriptionText').removeAttr('disabled');
+                            $tr.find('input[type="text"]').removeAttr('disabled');
+                            if (!editingRow) {
+                                $tr.attr('data-file-id', file._id);
+                            }
                         }
 
                         // For small files, I cannot receive the progress via socket
@@ -301,24 +314,23 @@ block footerScript
                         $tr.find('.progress').removeClass('progress-striped').end().find('.progress-bar').css('width', '100%');
                     });
 
+                    $('#uploader').removeData('editingRow').attr('multiple', 'multiple');
                     $('#saveButton').removeAttr('disabled');
+                    $('.changeButton').removeAttr('disabled');
                 }
             }).on('fileuploadadd', function(e, data) {
                 $('#uploadedFiles').parent().removeClass('hide');
+
+                var editingRow = $('#uploader').data('editingRow');
                 $.each(data.files, function(index, file) {
-                    var $tr = $('#fileRowTemplate').clone();
+                    var $tr = editingRow ? editingRow : $('#fileRowTemplate').clone().appendTo('#uploadedFiles').removeClass('hide').removeAttr('id');
                     $tr
-                        .appendTo('#uploadedFiles')
-                        .removeClass('hide')
-                        .removeAttr('id')
                         .attr('data-file-name', file.name)
                         .find('td')
-                            .eq(0).html(file.name + ' (' + filesize(file.size) + ')');
+                            .eq(0).html([file.name.length > 30 ? file.name.substr(0, 30) + '...' : file.name, filesize(file.size)].join(' / '));
                 });
             }).on('fileuploadprogress', function(e, data) {
                 updateProgress(data.files[0].name, 100 * data.loaded / data.total + '%');
-            }).on('fileuploadprogressall', function(e, data) {
-            }).on('fileuploadfail', function(e, data) {
             });
 
             var socket = io.connect();
@@ -329,6 +341,7 @@ block footerScript
             // Upload thumbnail
             $('#thumbnailUploader').fileupload({
                 dataType: 'json',
+                formData: {},
                 start: function(e) {
                     $('#saveButton').attr('disabled', 'disabled');
                     // Show the thumbnail generating progress
@@ -344,10 +357,10 @@ block footerScript
 
             $('#saveButton').on('click', function(e) {
                 // Collect uploaded files
-                var uploadedFiles = [], file;
+                var uploadedFiles = [], fileId = null;
                 $('#uploadedFiles').find('tr').each(function() {
-                    if (file = $(this).data('file')) {
-                        uploadedFiles.push(file);
+                    if (fileId = $(this).attr('data-file-id')) {
+                        uploadedFiles.push(fileId);
                     }
                 });
                 $('input[name="uploaded_files"]').val(JSON.stringify(uploadedFiles));
@@ -363,8 +376,18 @@ block footerScript
             });
 
             // Update file description handler
-            $('#uploadedFiles').on('keyup', '.descriptionText', function() {
-                $(this).parents('tr').data('file').description = $(this).val();
+            $('#uploadedFiles').on('click', '.editableDesc', function() {
+                var fid = $(this).parents('tr').attr('data-file-id');
+                if (fid) {
+                    $(this).inlineEditor({
+                        method: 'POST',
+                        url: '/admin/file/desc',
+                        field: 'desc',
+                        data: {
+                            fid: fid
+                        }
+                    });
+                }
             });
 
             // Remove file handler
@@ -380,6 +403,20 @@ block footerScript
                         })
                         .end()
                     .modal('show');
+            });
+
+            // Change file handler
+            $('#uploadedFiles').on('click', '.changeButton', function() {
+                var $row = $(this).parents('tr');
+                $('#uploader')
+                        .data('editingRow', $row)
+                        .removeAttr('multiple')
+                        .fileupload({
+                            formData: {
+                                fid: $row.attr('data-file-id')
+                            }
+                        })
+                        .click();
             });
 
             // Update supported browsers option
