--- a/app/views/dashboard/index.jade
+++ b/app/views/dashboard/index.jade
@@ -32,23 +32,47 @@ block content
                 div.panel-body.text-center(style="display: none;")
                     i.fa.fa-spin.fa-refresh
 
-    h3 Top Downloads
-    hr
-    div.row
-        div.col-lg-4
-            div.panel.panel-default
-                div.panel-heading Today
-                div.topDownloads(data-days="1")
+    section
+        div.page-header
+            h3
+                | Top files&nbsp;
+                small which have been downloaded most
+        div.row
+            div.col-lg-4
+                div.panel.panel-default
+                    div.panel-heading Today and Yesterday
+                    div.topFiles(data-days="2")
 
-        div.col-lg-4
-            div.panel.panel-default
-                div.panel-heading This week
-                div.topDownloads(data-days="7")
+            div.col-lg-4
+                div.panel.panel-default
+                    div.panel-heading Last 7 days
+                    div.topFiles(data-days="7")
 
-        div.col-lg-4
-            div.panel.panel-default
-                div.panel-heading This month
-                div.topDownloads(data-days="30")
+            div.col-lg-4
+                div.panel.panel-default
+                    div.panel-heading Last 30 days
+                    div.topFiles(data-days="30")
+
+    section
+        div.page-header
+            h3
+                | Top accounts&nbsp;
+                small who have downloaded most
+        div.row
+            div.col-lg-4
+                div.panel.panel-default
+                    div.panel-heading Today and Yesterday
+                    div.topAccounts(data-days="2")
+
+            div.col-lg-4
+                div.panel.panel-default
+                    div.panel-heading Last 7 days
+                    div.topAccounts(data-days="7")
+
+            div.col-lg-4
+                div.panel.panel-default
+                    div.panel-heading Last 30 days
+                    div.topAccounts(data-days="30")
 
 block footerScript
     script(type="text/javascript", src="/vendor/filesize/filesize.min.js")
@@ -59,8 +83,8 @@ block footerScript
         google.load('visualization', '1.0', {'packages': ['corechart']});
         google.setOnLoadCallback(function() {
             $(function() {
-                function drawChart(days, limit) {
-                    var width = $('#topDownloadDay').width();
+                function showTopFiles(days, limit) {
+                    var width = $('.topFiles').eq(0).width();
                     limit = limit || 5;
                     $.post('/admin/dashboard/file', {
                         days: days,
@@ -75,11 +99,10 @@ block footerScript
                             );
                         });
 
-                        var container = $('.topDownloads[data-days="' + days + '"]').get(0);
-                        console.log(container);
-                        var chart = new google.visualization.PieChart(container);
+                        var container = $('.topFiles[data-days="' + days + '"]').get(0),
+                            chart     = new google.visualization.PieChart(container);
                         chart.draw(data, {
-                            width: width,
+                            //width: width,
                             height: 220,
                             fontName: 'Lato',
                             fontSize: 12,
@@ -93,9 +116,45 @@ block footerScript
                     });
                 };
 
-                drawChart(1, 5);
-                drawChart(7, 5);
-                drawChart(30, 5);
+                function showTopAccounts(days, limit) {
+                    limit = limit || 5;
+                    $.post('/admin/dashboard/account', {
+                        days: days,
+                        limit: limit
+                    }).success(function(response) {
+                        var data = new google.visualization.DataTable();
+                        data.addColumn('string', 'Account');
+                        data.addColumn('number', '#Downloads');
+                        $.each(response, function(index, account) {
+                            data.addRow(
+                                [account._id, account.num_downloads]
+                            );
+                        });
+
+                        var container = $('.topAccounts[data-days="' + days + '"]').get(0),
+                            chart     = new google.visualization.PieChart(container);
+                        chart.draw(data, {
+                            //width: width,
+                            height: 220,
+                            fontName: 'Lato',
+                            fontSize: 12,
+                            chartArea: {
+                                left: 0,
+                                top: 10,
+                                width: '100%',
+                                height: 200
+                            }
+                        });
+                    });
+                };
+
+                showTopFiles(2);
+                showTopFiles(7);
+                showTopFiles(30);
+
+                showTopAccounts(2);
+                showTopAccounts(7);
+                showTopAccounts(30);
             });
         });
 
